Writing Portfolio Update
Updated writing portfolio with correct links and extended blurbs. Also rearranged order of projects a little bit.

--- a/writing.html
+++ b/writing.html
@@ -30,12 +30,12 @@
 
   <div class="row port-row">
       <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-        <a href="#"><img class="port-img-left" src="images/uefi.png" alt="uefi-logo"></a>
+        <a href="https://uefi.org/specs/UEFI/2.10/"><img class="port-img-left" src="images/uefi.png" alt="uefi-logo"></a>
       </div>
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-          <h5 class="port-title"><a class="port-link" href="#">UEFI Specification</a></h5>
-          <p class="port-blurb">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel.
+          <h5 class="port-title"><a class="port-link" href="https://uefi.org/specs/UEFI/2.10/">UEFI Specification</a></h5>
+          <p class="port-blurb">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel. Document was written in reStructuredText and then compiled into LaTeX and HTML/CSS formats. Edits were made using a combination of reStructuredText, LaTeX, HTML/CSS, and Python/regex scripting.
           </p>   
       </div>
   </div>
@@ -44,12 +44,12 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="#">DATSR Documentation</a></h5>
-        <p class="port-blurb">Created documentation for student-led web time series repository project. Includes requirement engineering, design specification, user docs, and developer's manual.</p>  
+        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2">Gbiv Documentation</a></h5>
+        <p class="port-blurb">Created documentation for a student-led project where we developed a photo color analysis web application. The documentation included requirement engineering, design specification, user docs, and developer's manual. Wrote this documentation in plaintext reStructuredText files stored in a shared GitHub repository. These plaintext files were later compiled into pdf and HTML files using the Sphinx documentation generator.</p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="#"><img class="port-img-right" src="images/time_series.png" alt="mount-fuji-painting"></a>
+      <a href="https://github.com/IanMcConachie/CS422Project2"><img class="port-img-right" src="images/color_wheel.png" alt="mount-fuji-painting"></a>
     </div>
   </div>
 
@@ -57,12 +57,12 @@
 
   <div class="row port-row">
       <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-        <a href="#"><img class="port-img-left" src="images/tianocore.jpg" alt="tianocore-logo"></a>
+        <a href="https://github.com/tianocore-training/Presentation_FW"><img class="port-img-left" src="images/tianocore.jpg" alt="tianocore-logo"></a>
       </div>
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-          <h5 class="port-title"><a class="port-link" href="#">Tianocore Training Guides</a></h5>
-          <p class="port-blurb">Wrote Markdown lab guides for firmware development courses as part of the Tianocore training program as a Technical Writing Intern at Intel.
+          <h5 class="port-title"><a class="port-link" href="https://github.com/tianocore-training/Presentation_FW">Tianocore Training Guides</a></h5>
+          <p class="port-blurb">Wrote Markdown lab guides for firmware development courses as part of the Tianocore training program as a Technical Writing Intern at Intel. These internal training courses teach low-level programming to developers at Intel through labs and corresponding lab guides, and are made openly available through a public GitHub repository.
           </p>   
       </div>
   </div>
@@ -71,12 +71,12 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="#">Gbiv Documentation</a></h5>
-        <p class="port-blurb">Working on documentation for color analysis web application. Includes requirement engineering, design specification, user docs, and developer's manual.</p>  
+        <h5 class="port-title"><a class="port-link" href="https://en.wikipedia.org/wiki/Special:Contributions/Ian503">Wikipedia Editing</a></h5>
+        <p class="port-blurb">Contribute to Wikipedia as a hobby, both adding new content and improving/editing existing content. Have improved skills in professional writing within an open community across a wide variety of domains. Learned wikitext markup language and became very familiar with best practices when contributing to a shared documentation.</p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="#"><img class="port-img-right" src="images/color_wheel.png" alt="color-wheel"></a>
+      <a href="https://en.wikipedia.org/wiki/Special:Contributions/Ian503"><img class="port-img-right" src="images/wiki_logo.png" alt="wikipedia-logo"></a>
     </div>
   </div>
 
@@ -84,12 +84,12 @@
 
   <div class="row port-row">
       <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-        <a href="#"><img class="port-img-left" src="images/uefi.png" alt="uefi-logo"></a>
+        <a href="https://uefi.org/specs/ACPI/6.5/"><img class="port-img-left" src="images/uefi.png" alt="uefi-logo"></a>
       </div>
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-          <h5 class="port-title"><a class="port-link" href="#">ACPI Specification</a></h5>
-          <p class="port-blurb">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel.
+          <h5 class="port-title"><a class="port-link" href="https://uefi.org/specs/ACPI/6.5/">ACPI Specification</a></h5>
+          <p class="port-blurb">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel. Document was written in reStructuredText and then compiled into LaTeX and HTML/CSS formats. Edits were made using a combination of reStructuredText, LaTeX, HTML/CSS, and Python/regex scripting.
           </p>   
       </div>
   </div>
@@ -98,12 +98,13 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="#">Wikipedia Editing</a></h5>
-        <p class="port-blurb">Edited several wikipedia pages both adding new content and improving/editing existing content.</p>  
+        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS-422-Project-1/tree/main">DATSR Documentation</a></h5>
+        <p class="port-blurb"> Wrote documentation for student-led web application project. DATSR is a program that essentially functions as an online time series data repository. Documentation was written in plaintext reStructuredText and then compiled into HTML and LaTeX documents using the Sphinx documentation generator.
+        </p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="#"><img class="port-img-right" src="images/wiki_logo.png" alt="wikipedia-logo"></a>
+      <a href="https://github.com/IanMcConachie/CS-422-Project-1/tree/main"><img class="port-img-right" src="images/time_series.png" alt="time-series-graph"></a>
     </div>
   </div>
 
