Minor blurb edit
Minor edit made to welcome blurb.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p class="about-blurb">
           Hello and welcome to my website! My name is Ian McConachie and I am a recent graduate in computer science and mathematics from Portland, Oregon. I am currently pursuing a career in academic research in the Boston area. Specifically, I am in the market for quantitative roles in university research groups. I am passionate about the advancement of science and I love to share that passion and curiosity with the world. 
           <br><br>
-          Outside of work, I care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, Meals on Wheels, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, my hobbies include writing, hiking/backpacking, and table tennis.
+          Outside of work, I care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, Meals on Wheels, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy writing, hiking/backpacking, and table tennis.
         </p>
 
       <div class="row about-table">
