Minor Blurb Edits
Mostly correcting Javascript to JavaScript.

--- a/code.html
+++ b/code.html
@@ -34,7 +34,7 @@
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
           <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Stegosaurus">Stegosaurus</a></h5>
-          <p class="port-blurb">Developed a client-server software program for inserting cryptographically secure invisible watermarks into photos in order to associate particular images with verified image producers. Meant to protect against misinformation spread through generative AI and other image-doctoring technologies. Python used to generate, insert, extract, and verify watermarks. Flask was used for general framework of both server and client programs--HTML, CSS, and Javascript used for web programming.
+          <p class="port-blurb">Developed a client-server software program for inserting cryptographically secure invisible watermarks into photos in order to associate particular images with verified image producers. Meant to protect against misinformation spread through generative AI and other image-doctoring technologies. Python used to generate, insert, extract, and verify watermarks. Flask was used for general framework of both server and client programs--HTML, CSS, and JavaScript used for web programming.
           </p>   
       </div>
   </div>
@@ -62,7 +62,7 @@
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
           <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/IanMcConachie.github.io">Personal Website</a></h5>
-          <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and Javascript. Implemented a responsive web design using both custom CSS and the Bootstrap JS/CSS library. Built from scratch (ie, no templates or frameworks) in order to hone web development skills. 
+          <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and JavaScript. Implemented a responsive web design using both custom CSS and the Bootstrap JS/CSS library. Built from scratch (ie, no templates or frameworks) in order to hone web development skills. 
           </p>   
       </div>
   </div>
@@ -89,7 +89,7 @@
 
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
         <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2">Gbiv Color Analyzer</a></h5>
-        <p class="port-blurb">Developed a web application for extracting the dominant color in an image and producing a collection of color palettes which include that color. Intended to be applied in areas of design including fashion, interior decoration, and painting. Core fuctionality was implemented using Python which was then integrated into a web application using Flask and Jinja2. Further web programming done using HTML, CSS, and Javascript.</p>  
+        <p class="port-blurb">Developed a web application for extracting the dominant color in an image and producing a collection of color palettes which include that color. Intended to be applied in areas of design including fashion, interior decoration, and painting. Core fuctionality was implemented using Python which was then integrated into a web application using Flask and Jinja2. Further web programming done using HTML, CSS, and JavaScript.</p>  
     </div>
   </div>
 
