--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="col col-6">
           <h2 class="sub-title">Skills</h2>
           <h3 class="abt-subtitle">Programming</h3>
-          <h4 class="abt-txt">Python (PyTorch, NumPy, Matplotlib, pandas), R, C++, C, Macaulay2 HTML, CSS, Javascript, LaTeX, Markdown, reStructuredText, Git, Linux</h4>
+          <h4 class="abt-txt">Python (PyTorch, NumPy, Matplotlib, pandas), R, C++, C, Macaulay2 HTML, CSS, JavaScript, SQL, PostgreSQL, SQLAlchemy, LaTeX, Markdown, reStructuredText, Git, Linux</h4>
           <h3 class="abt-subtitle">Non-Programming</h3>
           <h4 class="abt-txt">Statistics, Data Analysis, Scientific and Technical Writing, Public Speaking, Interpersonal Communication, Quick Learning</h4>
         </div>
