--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="about-me">
         <h1 class="main-title">About Me</h1>
         <p class="about-blurb">
-          Hello and welcome to my website! My name is Ian McConachie and I am a recent graduate in computer science and mathematics from Portland, Oregon. I am currently pursuing a career in research in the Boston area. Specifically, I am in the market for analysis, writing, and/or development roles. I am passionate about the advancement of science and I love to share that passion and curiosity with the world. 
+          Hello and welcome to my website! My name is Ian McConachie and I am a recent graduate in computer science and mathematics from Portland, Oregon. I am currently pursuing career opportunities in the Boston area. Specifically, I am in the market for analysis, writing, and/or development roles. I am passionate about the advancement of science and technology and I love to share that passion and curiosity with the world. 
           <br><br>
           Outside of work, I care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, Meals on Wheels, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy writing, hiking/backpacking, and table tennis.
         </p>
