updated writing portfolio

--- a/writing.html
+++ b/writing.html
@@ -35,7 +35,7 @@
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
           <h5 class="port-title"><a class="port-link" href="https://uefi.org/specs/UEFI/2.10/">UEFI Specification</a></h5>
-          <p class="port-blurb">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel. Document was written in reStructuredText and then compiled into LaTeX and HTML/CSS formats. Edits were made using a combination of reStructuredText, LaTeX, HTML/CSS, and Python/regex scripting.
+          <p class="port-blurb">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel. Practiced writing for technical software specifications, specifically in the firmware domain; communicated extensively with SMEs in the multi-organization UEFI working group. Document was written in reStructuredText and then compiled into LaTeX and HTML/CSS formats using the Sphinx documentation generator. Edits were made using a combination of reStructuredText, LaTeX, HTML/CSS, and Python/regex scripting.
           </p>   
       </div>
   </div>
@@ -44,12 +44,12 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2">Gbiv Documentation</a></h5>
-        <p class="port-blurb">Created documentation for a student-led project where we developed a photo color analysis web application. The documentation included requirement engineering, design specification, user docs, and developer's manual. Wrote this documentation in plaintext reStructuredText files stored in a shared GitHub repository. These plaintext files were later compiled into pdf and HTML files using the Sphinx documentation generator.</p>  
+        <h5 class="port-title"><a class="port-link" href="pdfs/D_logicaland_D-report.pdf">D&&D Merchant Technical Report</a></h5>
+        <p class="port-blurb">Wrote a formal software report on a predictive neural network I developed to price items in tabletop role-playing games. In implementing the model I practiced web scraping, data cleaning, NLP, neural network development, and evaluation. Writing the report improved my skills in technical writing for machine learning as well as data visualization and research. D&&D Merchant itself was implemented using the PyTorch machine learning framework; the documentation was written in LaTeX with visuals created using MS Visio and the Matplotlib Python library.</p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="https://github.com/IanMcConachie/CS422Project2"><img class="port-img-right" src="images/color_wheel.png" alt="mount-fuji-painting"></a>
+      <a href="pdfs/D_logicaland_D-report.pdf"><img class="port-img-right" src="images/dandd.jpg" alt="mount-fuji-painting"></a>
     </div>
   </div>
 
@@ -71,8 +71,36 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2/tree/main/docs">Gbiv Documentation</a></h5>
+        <p class="port-blurb">Created documentation for a student-led project where we developed a photo color analysis web application. The documentation included requirement engineering, design specification, user docs, and developer's manual. Wrote this documentation in plaintext reStructuredText files stored in a shared GitHub repository. These plaintext files were later compiled into pdf and HTML files using the Sphinx documentation generator.</p>  
+    </div>
+
+    <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+      <a href="https://github.com/IanMcConachie/CS422Project2"><img class="port-img-right" src="images/color_wheel.png" alt="mount-fuji-painting"></a>
+    </div>
+  </div>
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+      <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+        <a href="pdfs/Intro_Stats_Curriculum.pdf"><img class="port-img-left" src="images/stats.png" alt="tianocore-logo"></a>
+      </div>
+
+      <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+          <h5 class="port-title"><a class="port-link" href="pdfs/Intro_Stats_Curriculum.pdf">Report Bayesian vs. Frequentist Statistics Curriculum</a></h5>
+          <p class="port-blurb">Conducted a formal qualitative investigation into the relative benefits of Bayesian versus frequentist statistics in introductory statistics courses. Practiced writing about a highly technical topic in a report aimed towards a non-technical audience. Improved skills in academic research, data visualization, and statistics. Written in LaTeX and then compiled into a pdf with clickable links.
+          </p>   
+      </div>
+  </div>
+  
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+    <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
         <h5 class="port-title"><a class="port-link" href="https://en.wikipedia.org/wiki/Special:Contributions/Ian503">Wikipedia Editing</a></h5>
-        <p class="port-blurb">Contribute to Wikipedia as a hobby, both adding new content and improving/editing existing content. Have improved skills in professional writing within an open community across a wide variety of domains. Learned wikitext markup language and became very familiar with best practices when contributing to a shared documentation.</p>  
+        <p class="port-blurb">Contribute to Wikipedia as a hobby, both adding new content and improving/editing existing content. Have improved skills in professional writing within an open community across a wide variety of domains. Learned wikitext markup language and became very familiar with best practices when contributing to a shared documentation site.</p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
@@ -89,7 +117,7 @@
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
           <h5 class="port-title"><a class="port-link" href="https://uefi.org/specs/ACPI/6.5/">ACPI Specification</a></h5>
-          <p class="port-blurb">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel. Document was written in reStructuredText and then compiled into LaTeX and HTML/CSS formats. Edits were made using a combination of reStructuredText, LaTeX, HTML/CSS, and Python/regex scripting.
+          <p class="port-blurb">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel. Practiced writing for technical software specifications, specifically in the firmware domain; communicated extensively with SMEs in the multi-organization ACPI working group. Document was written in reStructuredText and then compiled into LaTeX and HTML/CSS formats. Edits were made using a combination of reStructuredText, LaTeX, HTML/CSS, and Python/regex scripting.
           </p>   
       </div>
   </div>
@@ -99,7 +127,7 @@
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
         <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS-422-Project-1/tree/main">DATSR Documentation</a></h5>
-        <p class="port-blurb"> Wrote documentation for student-led web application project. DATSR is a program that essentially functions as an online time series data repository. Documentation was written in plaintext reStructuredText and then compiled into HTML and LaTeX documents using the Sphinx documentation generator.
+        <p class="port-blurb"> Wrote documentation for student-led web application that functioned as an online time series data repository. Practiced technical writing for user guides and developer manuals. Documentation was written in plaintext reStructuredText and then compiled into HTML and LaTeX/pdf documents using the Sphinx documentation generator.
         </p>  
     </div>
 
