Fixed links, opens new tab now.

--- a/code.html
+++ b/code.html
@@ -29,11 +29,11 @@
 
   <div class="row port-row">
       <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-        <a href="https://github.com/IanMcConachie/Stegosaurus"><img class="port-img-left" src="images/stegosaurus.jpg" alt="stegosaurus-drawing"></a>
+        <a href="https://github.com/IanMcConachie/Stegosaurus" target="_blank" rel="noopener noreferrer"><img class="port-img-left" src="images/stegosaurus.jpg" alt="stegosaurus-drawing"></a>
       </div>
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-          <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Stegosaurus">Stegosaurus</a></h5>
+          <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Stegosaurus" target="_blank" rel="noopener noreferrer">Stegosaurus</a></h5>
           <p class="port-blurb">Developed a client-server software program for inserting cryptographically secure invisible watermarks into photos in order to associate particular images with verified image producers. Meant to protect against misinformation spread through generative AI and other image-doctoring technologies. Python used to generate, insert, extract, and verify watermarks. Flask was used for general framework of both server and client programs--HTML, CSS, and JavaScript used for web programming.
           </p>   
       </div>
@@ -43,12 +43,12 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/R_projects">R Projects</a></h5>
+        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/R_projects" target="_blank" rel="noopener noreferrer">R Projects</a></h5>
         <p class="port-blurb">Through several statistics courses at the University of Oregon developed a series of programs using R, R Markdown, and stan. These programs perform a wide variety of analysis techniques on publicly available datasets as a way of honing skills in statistics and statistical programming. Topics covered include sampling, regression, analysis of variance, Bayesian inference, and Bayesian regression.</p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="https://github.com/IanMcConachie/R_projects"><img class="port-img-right" src="images/r_logo.jpg" alt="r-language-logo"></a>
+      <a href="https://github.com/IanMcConachie/R_projects" target="_blank" rel="noopener noreferrer"><img class="port-img-right" src="images/r_logo.jpg" alt="r-language-logo"></a>
     </div>
   </div>
 
@@ -57,11 +57,11 @@
 
   <div class="row port-row">
       <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-        <a href="https://github.com/IanMcConachie/IanMcConachie.github.io"><img class="port-img-left" src="images/web_logo.png" alt="website-logo"></a>
+        <a href="https://github.com/IanMcConachie/IanMcConachie.github.io" target="_blank" rel="noopener noreferrer"><img class="port-img-left" src="images/web_logo.png" alt="website-logo"></a>
       </div>
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-          <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/IanMcConachie.github.io">Personal Website</a></h5>
+          <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/IanMcConachie.github.io" target="_blank" rel="noopener noreferrer">Personal Website</a></h5>
           <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and JavaScript. Implemented a responsive web design using both custom CSS and the Bootstrap JS/CSS library. Built from scratch (ie, no templates or frameworks) in order to hone web development skills. 
           </p>   
       </div>
@@ -71,12 +71,12 @@
 
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Fuji_Messenger">Fuji Messenger</a></h5>
+        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Fuji_Messenger" target="_blank" rel="noopener noreferrer">Fuji Messenger</a></h5>
         <p class="port-blurb">Developed an instant messaging network protocol that only allows messages in the form of a haiku. This was done as an exercise to improve programming skills and understanding in low-level programming and networking. Implemented using C and C++. The UDP protocol was used to send messages across the network. </p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="https://github.com/IanMcConachie/Fuji_Messenger"><img class="port-img-right" src="images/fuji.jpg" alt="mount-fuji-painting"></a>
+      <a href="https://github.com/IanMcConachie/Fuji_Messenger" target="_blank" rel="noopener noreferrer"><img class="port-img-right" src="images/fuji.jpg" alt="mount-fuji-painting"></a>
     </div>
   </div>
 
@@ -84,11 +84,11 @@
 
   <div class="row port-row">
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
-      <a href="https://github.com/IanMcConachie/CS422Project2"><img class="port-img-left" src="images/color_wheel.png" alt="color-wheel"></a>
+      <a href="https://github.com/IanMcConachie/CS422Project2" target="_blank" rel="noopener noreferrer"><img class="port-img-left" src="images/color_wheel.png" alt="color-wheel"></a>
     </div>
 
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2">Gbiv Color Analyzer</a></h5>
+        <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2" target="_blank" rel="noopener noreferrer">Gbiv Color Analyzer</a></h5>
         <p class="port-blurb">Developed a web application for extracting the dominant color in an image and producing a collection of color palettes which include that color. Intended to be applied in areas of design including fashion, interior decoration, and painting. Core fuctionality was implemented using Python which was then integrated into a web application using Flask and Jinja2. Further web programming done using HTML, CSS, and JavaScript.</p>  
     </div>
   </div>
