Added home button on portfolio pages, fixed home page links.

--- a/code.html
+++ b/code.html
@@ -25,6 +25,7 @@
 <body>
 	<div class="page-header">
 		<h1 class="page-title">Code Portfolio</h1>
+    <a href="index.html"><i class="fa-solid fa-house home-logo"></i></a>
 	</div>
 
   <div class="row port-row">
