--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="row port-table">
         <div class="col col-6 portfolio-col">
           <div class="port-item">
-            <a href="code.html" class="port-link port-link-1" target="_blank" rel="noopener noreferrer">
+            <a href="code.html" class="port-link port-link-1">
               <i class="fa-solid fa-code port-logo"></i>
               <h3 class="port-title port-code">Code</h3>
             </a>
@@ -139,7 +139,7 @@
         </div>
         <div class="col col-6 portfolio-col">
           <div class="port-item">
-            <a href="writing.html" class="port-link port-link-2" target="_blank" rel="noopener noreferrer">
+            <a href="writing.html" class="port-link port-link-2">
               <i class="fa-solid fa-pencil port-logo"></i>
               <h3 class="port-title port-write">Writing</h3>
             </a>
