--- a/writing.html
+++ b/writing.html
@@ -26,6 +26,7 @@
 <body>
 	<div class="page-header">
 		<h1 class="page-title">Writing Portfolio</h1>
+    <a href="index.html"><i class="fa-solid fa-house home-logo"></i></a>
 	</div>
 
   <div class="row port-row">
