--- a/code.html
+++ b/code.html
@@ -35,7 +35,7 @@
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
           <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Stegosaurus" target="_blank" rel="noopener noreferrer">Stegosaurus</a></h5>
-          <p class="port-blurb">Developed a client-server software program for inserting cryptographically secure invisible watermarks into photos in order to associate particular images with verified image producers. Meant to protect against misinformation spread through generative AI and other image-doctoring technologies. Python used to generate, insert, extract, and verify watermarks. Flask was used for general framework of both server and client programs--HTML, CSS, and JavaScript used for web programming.
+          <p class="port-blurb">Developed a client-server software program for inserting cryptographically secure invisible watermarks into photos in order to associate particular images with verified image producers. Meant to protect against misinformation spread through generative AI and other image-doctoring technologies. Practiced network security, web development, cryptography, and image data manipulation. Python used to generate, insert, extract, and verify watermarks. Flask was used for general framework of both server and client programs--HTML, CSS, and JavaScript used for web programming.
           </p>   
       </div>
   </div>
@@ -63,7 +63,7 @@
 
       <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
           <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/IanMcConachie.github.io" target="_blank" rel="noopener noreferrer">Personal Website</a></h5>
-          <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and JavaScript. Implemented a responsive web design using both custom CSS and the Bootstrap JS/CSS library. Built from scratch (ie, no templates or frameworks) in order to hone web development skills. 
+          <p class="port-blurb">Created a multi-page resume website hosted on GitHub using HTML, CSS, and JavaScript. Implemented a responsive web design using both custom CSS and the Bootstrap JS/CSS library. Practiced web development, web design, and version control.
           </p>   
       </div>
   </div>
@@ -73,7 +73,7 @@
   <div class="row port-row">
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
         <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/Fuji_Messenger" target="_blank" rel="noopener noreferrer">Fuji Messenger</a></h5>
-        <p class="port-blurb">Developed an instant messaging network protocol that only allows messages in the form of a haiku. This was done as an exercise to improve programming skills and understanding in low-level programming and networking. Implemented using C and C++. The UDP protocol was used to send messages across the network. </p>  
+        <p class="port-blurb">Developed an instant messaging network protocol that only allows messages in the form of a haiku. Improve skills in low-level programming, networking, and Bash scripting. Implemented using C and C++ on a Linux operating system. The UDP transport-layer protocol was used to send messages across the network. </p>  
     </div>
 
     <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
@@ -90,7 +90,7 @@
 
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
         <h5 class="port-title"><a class="port-link" href="https://github.com/IanMcConachie/CS422Project2" target="_blank" rel="noopener noreferrer">Gbiv Color Analyzer</a></h5>
-        <p class="port-blurb">Developed a web application for extracting the dominant color in an image and producing a collection of color palettes which include that color. Intended to be applied in areas of design including fashion, interior decoration, and painting. Core fuctionality was implemented using Python which was then integrated into a web application using Flask and Jinja2. Further web programming done using HTML, CSS, and JavaScript.</p>  
+        <p class="port-blurb">Developed a web application for extracting the dominant color in an image and producing a collection of color palettes which include that color. Intended to be applied in areas of design including fashion, interior decoration, and painting. Core functionality was implemented using Python which was then integrated into a web application using Flask and Jinja2. Further web development done using HTML, CSS, and JavaScript.</p>  
     </div>
   </div>
 
