Hide Portfolio section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
         <li class="menu-item">
           <button onclick="scroller('volunteering')" class="menu-link">Volunteering</button>
         </li>
+        <!--
         <li class="menu-item">
           <button onclick="scroller('portfolio')" class="menu-link">Portfolio</button>
         </li>
+        -->
         <li class="menu-item">
           <button onclick="scroller('contact')" class="menu-link">Contact</button>
         </li>
@@ -93,9 +95,11 @@
         <li class="menu-item-top">
           <button onclick="scroller('volunteering')" class="menu-link">Volunteering</button>
         </li>
+        <!--
         <li class="menu-item-top">
           <button onclick="scroller('portfolio')" class="menu-link">Portfolio</button>
         </li>
+        -->
         <li class="menu-item-top">
           <button onclick="scroller('contact')" class="menu-link">Contact</button>
         </li>
@@ -209,12 +213,9 @@
     <section id="education">
       <h1 class="main-title not-top">Education</h1>
       <div class="edu-div row">
-        <div class="col-4">
-          <img src="images/duck.png" class="duck-pic" alt="A picture of a duck.">
-        </div>
 
-        <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
-          <h2 class="edu-big">University of Oregon (Go Ducks)</h2>
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 edu-blurb">
+          <h2 class="edu-big">University of Oregon</h2>
           <h2 class="edu-big">BS in Math and Computer Science</h2>
 
           <div class="edu-deats">
@@ -308,7 +309,8 @@
 
     </section>
 
-    <!-- Portfolio Section -->
+    <!--
+    Portfolio Section
     <section id="portfolio">
       <h1 class="main-title not-top">Portfolio</h1>
 
@@ -331,6 +333,7 @@
         </div>
       </div>
       </section>
+      -->
 
       <!-- Contact Section -->
       <section id="contact">
