Small copy edit

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section id="about-me">
         <h1 class="main-title">About Me</h1>
         <p class="about-blurb">
-          Hello and welcome to my website! My name is Ian McConachie and I am a recent graduate in computer science and mathematics currently pursuing career opportunities in the Boston area. Specifically, I am in interested in positions within the education and nonprofit sectors. I love teaching, writing, and science and I am looking to apply these passions to make the world a better place.
+          Hello and welcome to my website! My name is Ian McConachie and I am a recent graduate in computer science and mathematics currently pursuing career opportunities in the Boston area. Specifically, I am in interested in positions in nonprofit operations and education. I love writing, teaching, and science and I am looking to apply these passions to make the world a better place.
           <br><br>
           Outside of work, I care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, Meals on Wheels, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy painting, hiking/backpacking, and table tennis.
         </p>
