--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     <section id="about-me">
         <h1 class="main-title">About Me</h1>
         <p class="about-blurb">
-          My name is Ian McConachie and I am a recent graduate in computer science and mathematics currently pursuing career opportunities in the Boston area. Specifically, I am in interested in positions within the education, legal services, and nonprofit sectors. I love teaching, writing, and STEM and I am looking to apply these passions to make the world a better place.
+          My name is Ian McConachie and I am a paralegal at the Massachusetts Attorney General's Office specializing in consumer protection related to cryptocurrency scams.
           <br><br>
-          Outside of work, I care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, Meals on Wheels, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy painting, hiking/backpacking, and table tennis.
+          Outside of work, I care deeply about volunteering. I have worked with organizations such as Prison Book Program, The Oregon Justice Resource Center, Meals on Wheels, and The Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy painting, hiking/backpacking, and table tennis.
         </p>
 
       <!---
