Video embedding test

--- a/index.html
+++ b/index.html
@@ -119,25 +119,17 @@
           Outside of work, I care deeply about volunteering. I have worked with organizations such as Prison Book Program, The Oregon Justice Resource Center, Meals on Wheels, and The Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, I enjoy painting, hiking/backpacking, and table tennis.
         </p>
 
-      <!---
-      <div class="row about-table">
-        <div class="col col-6">
-          <h2 class="sub-title">Education</h2>
-          <h3 class="abt-subtitle">University of Oregon</h3>
-          <h4 class="abt-txt"><b>2019-2023, Bachelor's of Science</b></h4>
-          <h4 class="abt-txt"><b>Majors:</b> Computer Science, Mathematics</h4>
-          <h4 class="abt-txt"><b>GPA:</b> 4.10, summa cum laude</h4>
-          <h4 class="abt-txt"><b>Selected Courses:</b> Statistical Methods I-II, Regression and Variance, Scientific and Technical Writing, Machine Learning, Software Methodologies, Secure Software Development</h4>
-        </div>
-        <div class="col col-6">
-          <h2 class="sub-title">Skills</h2>
-          <h3 class="abt-subtitle">Programming</h3>
-          <h4 class="abt-txt">Python (PyTorch, NumPy, Matplotlib, pandas), R, C++, C, Macaulay2 HTML, CSS, JavaScript, SQL, PostgreSQL, SQLAlchemy, LaTeX, Markdown, reStructuredText, Git, Linux</h4>
-          <h3 class="abt-subtitle">Non-Programming</h3>
-          <h4 class="abt-txt">Statistics, Data Analysis, Scientific and Technical Writing, Public Speaking, Interpersonal Communication, Quick Learning</h4>
-        </div>
-      </div>
-      -->
+    </section>
+
+    <!-- Media Section -->
+    <section id="media">
+        <h1 class="main-title">Media</h1>
+        <p class="about-blurb">
+           <iframe width="420" height="315"
+           src="https://www.youtube.com/watch?v=u9EbNJ-xiyQ">
+           </iframe> 
+        </p>
+
     </section>
 
     <!-- Work Experience Section -->
