--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
         <h1 class="main-title">Media</h1>
         <p class="about-blurb">
            <iframe width="420" height="315"
-           src="https://www.youtube.com/watch?v=u9EbNJ-xiyQ">
-           </iframe> 
+           src="https://www.youtube.com/embed/u9EbNJ-xiyQ"> </iframe> 
         </p>
 
     </section>
